# RangeIQ

./: .env.example  .gitignore  Launch RangeIQ.cmd  PROJECT_BRIEF.md  README.md  RangeIQ_logo_white.ai  Run RangeIQ Server.cmd  config.example.yaml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: deploy-droplet.yml
app/: dashboard.py
config/: api_sources.yaml  meshtastic.example.yaml  rangeiq.example.yaml
data/example/: caja_caliente_ranch.geojson  pastures.geojson
data/network/: mesh_health.example.csv  node_registry.example.yaml
data/sensors/: raw_packets.example.jsonl  (+3 more)
docs/: API_SOURCE_AUDIT.md  FREE_DATA_SOURCES.md  data_schema.md  deployment_notes.md  example_workflow.md  meshtastic_setup.md  packet_format.md  roadmap.md  sensor_network_architecture.md  station_hardware.md
scripts/: apply_user_workspace_bundle.py  create_pretrained_workspace_bundle.py  generate_mock_sensor_network.py  inspect_latest_packets.py  run_mock_ingestion.py  run_mqtt_ingestion.py  run_serial_ingestion.py
tests/: test_alert_service.py  test_auth_service.py  test_config_persistence.py  test_data_sources.py  test_feedback_dataset.py  test_fire_risk_service.py  test_ingestion_processor.py  test_io.py  test_mesh_health.py  test_mock_transport.py  test_model_feature_selection.py  test_packet_encoder.py  test_packet_parser.py  test_pipeline.py  test_public_data_service.py  test_ranch_domain.py  test_sensor_schema.py  test_sensor_service.py  test_sensor_status.py  test_vegetation_service.py  test_weather_service.py  test_workspace_bundle_service.py
(+141 files in other folders)
